--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <style>
         body { max-width: 900px; margin: 0 auto; padding: 20px; line-height: 1.6; }
-        header { text-align: center; border-bottom: 2px solid #efefef; padding-bottom: 20px; margin-bottom: 40px; }
-        .authors { font-size: 1.1em; color: #555; }
-        .affiliations { font-style: italic; color: #777; }
-        .abstract { background: #f9f9f9; padding: 20px; border-radius: 8px; border-left: 5px solid #0076ff; }
-        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-        th { background-color: #f2 f2 f2; }
-        .nav-links { display: flex; justify-content: center; gap: 20px; margin-bottom: 30px; font-weight: bold; }
+        header { text-align: center; margin-bottom: 40px; }
+        .authors { font-size: 1.1em; opacity: 0.9; }
+        .affiliations { font-style: italic; opacity: 0.7; margin-bottom: 10px; }
+        .abstract-box { border-left: 5px solid #0076ff; padding: 10px 20px; margin: 20px 0; background: rgba(128, 128, 128, 0.05); }
+        table { width: 100%; margin: 20px 0; border-collapse: collapse; }
+        nav { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; margin-bottom: 40px; border-bottom: 1px solid rgba(128, 128, 128, 0.2); padding-bottom: 20px; }
+        footer { margin-top: 50px; text-align: center; font-size: 0.9em; opacity: 0.6; }
+        .stat-highlight { font-weight: bold; color: #0076ff; }
     </style>
 </head>
 <body>
@@ -23,66 +23,84 @@
     <h1>Less is More: Adapting Text Embeddings for Low-Resource Languages with Small Scale Noisy Synthetic Data</h1>
     [cite_start]<div class="authors">Zaruhi Navasardyan, Spartak Bughdaryan, Bagrat Minasyan, Hrant Davtyan [cite: 2]</div>
     [cite_start]<div class="affiliations">Metric AI Lab [cite: 3]</div>
+    [cite_start]<p>Presented at EACL 2026 [cite: 1]</p>
 </header>
 
-<nav class="nav-links">
+<nav>
     <a href="#abstract">Abstract</a>
     <a href="#introduction">Introduction</a>
-    <a href="#results">Results</a>
+    <a href="#method">Method</a>
+    <a href="#results">Key Results</a>
     <a href="#conclusion">Conclusion</a>
 </nav>
 
-<section id="abstract" class="abstract">
+<section id="abstract">
     <h2>Abstract</h2>
-    [cite_start]<p>This work challenges the assumption that effective semantic alignment for low-resource languages (LRLs) requires massive datasets[cite: 7]. [cite_start]Focusing on Armenian, we show that fine-tuning a multilingual encoder on just 10,000 noisy synthetic pairs yields 11-12% average improvements, matching the performance of models trained on 1 million examples[cite: 8, 10].</p>
+    <div class="abstract-box">
+        [cite_start]<p>Low-resource languages (LRLs) often lack high-quality, large-scale datasets for training effective text embedding models[cite: 6]. [cite_start]We challenge the assumption that effective semantic alignment requires massive datasets or pristine translations[cite: 7]. [cite_start]By fine-tuning a multilingual encoder (mE5) on just <span class="stat-highlight">10,000 noisy synthetic pairs</span>, we achieved an 11-12% average improvement across benchmarks, matching the performance of models trained on 1 million examples[cite: 10].</p>
+    </div>
 </section>
 
 <section id="introduction">
     <h2>1. Introduction</h2>
-    [cite_start]<p>Text embeddings are the backbone of modern RAG systems and semantic search[cite: 16]. [cite_start]While high-resource languages enjoy an abundance of benchmarks, LRLs like Armenian remain underserved[cite: 17]. [cite_start]We explore a minimalist approach: leveraging noisy synthetic data generated via LLM translation to fine-tune strong multilingual base models[cite: 20].</p>
+    [cite_start]<p>Text embeddings are critical for Retrieval-Augmented Generation (RAG) and semantic search[cite: 16]. [cite_start]While high-resource languages like English have massive corpora, languages like Armenian (hye) remain underserved[cite: 17]. [cite_start]We demonstrate that semantic alignment for LRLs saturates early and is highly robust to noise[cite: 13].</p>
 </section>
 
 <section id="method">
-    <h2>2. Method</h2>
-    [cite_start]<p>We generated training data by translating English Reddit title-body pairs into Armenian using Gemma-2-27B-it[cite: 51, 53]. [cite_start]Although the translations were often grammatically incorrect, they preserved the contextual meaning necessary for semantic alignment[cite: 54, 55].</p>
+    <h2>2. Methodology</h2>
+    <ul>
+        [cite_start]<li><strong>Data Source:</strong> We sampled 2 million Reddit (title, body) pairs[cite: 51].</li>
+        [cite_start]<li><strong>Translation:</strong> Pairs were translated to Armenian using <em>Gemma-2-27B-it</em>[cite: 53].</li>
+        [cite_start]<li><strong>Noise Profile:</strong> Translations were often imperfect or grammatically incorrect, yet they preserved contextual meaning[cite: 54].</li>
+        [cite_start]<li><strong>Filtering:</strong> We used semantic consistency metrics (Semantic Drift and Translation Drift) to prune the corpus to 1 million high-fidelity samples[cite: 73, 81].</li>
+    </ul>
 </section>
 
 <section id="results">
-    <h2>3. Main Results</h2>
-    [cite_start]<p>Fine-tuning the mE5 model on just 10k examples led to a 35% relative improvement in retrieval tasks[cite: 120]. [cite_start]The performance remained nearly identical even when scaling the data to 1 million pairs[cite: 136, 180].</p>
+    <h2>3. Key Results</h2>
+    [cite_start]<p>Scaling data from 10k to 1M examples yielded only marginal gains, suggesting that alignment happens rapidly with minimal data[cite: 136, 138].</p>
     
-    <h3>Baseline Performance (Table 1)</h3>
+    <h3>Model Performance Comparison</h3>
     <table>
-        <tr>
-            <th>Model</th>
-            <th>Retrieval</th>
-            <th>STS [hye]</th>
-            <th>Average</th>
-        </tr>
-        <tr>
-            <td>multilingual-e5-base</td>
-            <td>58.15</td>
-            <td>66.19</td>
-            <td>64.30</td>
-        </tr>
-        <tr>
-            <td>multilingual-e5-large-it</td>
-            <td>73.37</td>
-            <td>69.94</td>
-            <td>72.99</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Model</th>
+                <th>Retrieval</th>
+                <th>STS [hye]</th>
+                <th>Average Score</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>multilingual-e5-base (Baseline)</td>
+                <td>58.15</td>
+                <td>66.19</td>
+                [cite_start]<td>64.30 [cite: 95]</td>
+            </tr>
+            <tr>
+                <td><strong>Our Model (10k samples)</strong></td>
+                <td><strong>79.35</strong></td>
+                <td><strong>70.84</strong></td>
+                [cite_start]<td><strong>76.42 [cite: 130]</strong></td>
+            </tr>
+            <tr>
+                <td>Our Model (1M samples)</td>
+                <td>83.70</td>
+                <td>69.04</td>
+                [cite_start]<td>73.92 [cite: 130]</td>
+            </tr>
+        </tbody>
     </table>
-    [cite_start]<p><i>[cite: 95]</i></p>
 </section>
 
 <section id="conclusion">
     <h2>4. Conclusion</h2>
-    [cite_start]<p>Our findings suggest that for strong multilingual baselines, semantic structure is already latent; the primary challenge is merely surface-level alignment[cite: 173, 174]. [cite_start]This democratizes high-performance embedding creation for resource-constrained communities[cite: 175].</p>
+    [cite_start]<p>Our "Less is More" finding suggests that for strong multilingual baselines, the semantic structure is already latent; the challenge is merely surface-level alignment[cite: 173, 174]. [cite_start]This approach democratizes SOTA embedding creation for communities with limited compute and data resources[cite: 175].</p>
 </section>
 
 <footer>
-    <hr>
-    <p style="text-align: center;">© 2026 Metric AI Lab. View the full paper <a href="ATE_2_for_LoResLm__EACL_2026.pdf">here</a>.</p>
+    [cite_start]<p>Full Model, Data, and Benchmark released to the public. [cite: 14]</p>
+    <p>© 2026 Metric AI Lab</p>
 </footer>
 
 </body>
